--- a/docs/MoneyPrinterTurbo.ipynb
+++ b/docs/MoneyPrinterTurbo.ipynb
@@ -53,12 +53,12 @@
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
-        "id": "j1ykyKjtqQnM",
-        "outputId": "1a0fbe10-e925-4696-a9b7-ded7f501d3e5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 384
-        }
+        },
+        "id": "j1ykyKjtqQnM",
+        "outputId": "1a0fbe10-e925-4696-a9b7-ded7f501d3e5"
       },
       "outputs": [
         {
@@ -92,7 +92,7 @@
         "\n",
         "# Set your authentication token\n",
         "# Replace \"your_ngrok_auth_token\" with your actual token\n",
-        "ngrok.set_auth_token(\"your_ngrok_auth_token\")"
+        "ngrok.set_auth_token(\"33StQMIV053SphMBRbNGqqpepIn_2QTZmnCmNRN8GsxhVLy7e\")"
       ]
     },
     {
